--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/view-default.html
@@ -32,7 +32,7 @@
         <!--/* M-62: Faceted Navigation */-->
         <div class="col-xs-12 col-md-3">
           <sly data-sly-use.tpl="../../shared/templates/module-faceted-navigation/faceted-navigation.html">
-            <sly data-sly-call="${ tpl.module @ data=data.facets }"></sly>
+            <sly data-sly-call="${ tpl.module @ data=data.facets, search=data.search }"></sly>
           </sly>
         </div>
 
