--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -13,28 +13,16 @@
       </div>
     </div>
 
-    <div data-sly-test="${ data.activeFilters.items.length }"
-      class="faceted-navigation-header__header-bottom">
+    <sly data-sly-use.tpl="../../shared/templates/module-faceted-navigation/faceted-navigation-filters.html">
+      <sly data-sly-call="${ tpl.module @ activeFilters=data.activeFilters }"></sly>
+    </sly>
 
-      <!--/* If There Are Active Filters */-->
-      <div data-sly-list.filter="${ data.activeFilters.items }"
-        class="faceted-navigation-header__active-filters">
-        <a class="faceted-navigation-header__filter-link"
-          href="${ filter.url }"
-          target="${ filter.target }"
-          aria-label="${ '{0} {1}' @ format=[ data.activeFilters.removeFilterLabel, filter.label ] }">
-          <i class="icon icon-close" aria-hidden="true"></i>
-          <span class="faceted-navigation-header__filter-label">${ filter.label }</span>
-        </a>
-      </div>
-
-      <!--/* Clear Filters */-->
-      <div class="faceted-navigation-header__filters-actions">
-        <a href="${ data.activeFilters.clearAllFilters.url }"
-          target="${ data.activeFilters.clearAllFilters.target }"
-          class="faceted-navigation-header__action-link">${ data.activeFilters.clearAllFilters.label }</a>
-      </div>
-    </div>
+    <a data-sly-test="${ data.activeFilters.items.length }"
+      target="_self"
+      data-toggle-modal-facet
+      class="open-facets-mobile b-button b-button__primary b-button__primary--light"
+      role="button">
+      ${ '{0} ({1})' @ i18n, format=[ 'Filters', data.resultsCount ] }
+    </a>
   </div>
-
 </template>
