--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -1,5 +1,7 @@
 .faceted-navigation-header { font-size: 14px; margin-bottom: 28px; }
 
+.faceted-navigation-header a.open-facets-mobile { width: 100%; text-align: center; }
+
 .faceted-navigation-header .styled-dropdown { position: relative; z-index: 1; }
 
 .faceted-navigation-header .styled-dropdown dd, .faceted-navigation-header .styled-dropdown dt, .faceted-navigation-header .styled-dropdown ul { margin: 0px; padding: 0px; }
@@ -34,8 +36,6 @@
 
 .faceted-navigation-header .styled-dropdown img.flag { border: 0; vertical-align: middle; margin-left: 10px; }
 
-.faceted-navigation-header__sort-options { margin-top: 4px; z-index: 2; }
-
 .faceted-navigation-header__sort-options .desc { color: #6b6b6b; }
 
 .faceted-navigation-header__sort-options .desc a { color: #0092dd; }
@@ -44,44 +44,42 @@
 
 .faceted-navigation-header__sort-options .flagvisibility { display: none; }
 
-.faceted-navigation-header__header-top, .faceted-navigation-header__header-bottom { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.faceted-navigation-header__header-top { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
 .faceted-navigation-header__active-filters { width: 100%; }
 
-.faceted-navigation-header__sort-options, .faceted-navigation-header__filters-actions { margin-left: auto; min-width: 85px; font-size: 14px; }
+.faceted-navigation-header__sort-options, .faceted-navigation-header__filters-actions { margin-left: auto; min-width: 85px; font-size: 14px; height: 3.5rem; margin-top: -5px; }
 
-.faceted-navigation-header__header-bottom { margin-top: 30px; }
+.faceted-navigation-header .faceted-navigation-filters { margin-top: 30px; display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.faceted-navigation-header__header-top { border-bottom: 2px solid #F8F8F8; padding-bottom: 28px; padding-top: 55px; }
+.faceted-navigation-header__header-top { border-bottom: 0.2rem solid #F8F8F8; padding-bottom: 3rem; padding-top: 5.5rem; }
 
-.faceted-navigation-header__title { font-size: 20px; font-weight: bold; }
+.faceted-navigation-header__title { font-size: 2.4rem; font-weight: bold; }
 
 .faceted-navigation-header__filter-link { display: inline-block; font-size: 14px; margin-right: 12px; }
 
 .faceted-navigation-header__filter-link .icon { font-size: 10px; margin-right: 2px; margin-top: 5px; }
 
-@media screen and (max-width: 991px) { .faceted-navigation-header__header-bottom { margin-top: 20px; }
+@media screen and (max-width: 991px) { .faceted-navigation-header .faceted-navigation-filters { display: none; }
   .faceted-navigation-header__filter-link { font-size: 12px; } }
 
-.faceted-navigation__mobile-container .faceted-navigation { padding: 60px 30px; }
+@media screen and (min-width: 992px) { .faceted-navigation-header .open-facets-mobile { display: none; } }
 
 .faceted-navigation { position: relative; }
 
-.faceted-navigation__list { list-style-type: none; padding: 0 0 .5rem .5rem; }
+.faceted-navigation h4 { font-size: 26px; font-weight: bold; margin-bottom: 1rem; }
+
+.faceted-navigation__list { list-style-type: none; padding: .3rem 0 1.3rem .5rem; margin-bottom: 0; }
 
 .faceted-navigation__list-item { text-align: left; display: block; padding: 0; padding-bottom: 1.5rem; }
 
-.faceted-navigation__list-item label.label { padding: 0; font-weight: normal; }
+.faceted-navigation__list-item.u-hide { display: none; }
+
+.faceted-navigation__list-item label.label { padding: 0; font-weight: normal; font-size: 1.3rem; }
 
 .faceted-navigation__list-item input[type="radio"].input--small + span::before, .faceted-navigation__list-item input[type="checkbox"].input--small + span::before { width: 2rem; height: 2rem; left: 0; top: -.3rem; }
 
-.faceted-navigation__list-item input[type="radio"].input--small:checked + span::after, .faceted-navigation__list-item input[type="checkbox"].input--small:checked + span::after { width: 1.2rem; height: 1.2rem; top: .1rem; left: .4rem; }
-
-.faceted-navigation__mobile-container { z-index: 40; background-color: #FFF; margin: 0; }
-
-.faceted-navigation__mobile-container.enabled { position: fixed; top: 0; left: 0; padding: 0; z-index: 300; overflow: auto; height: 100%; }
-
-.faceted-navigation__mobile-container .b-button { width: 100%; text-align: center; max-width: initial; }
+.faceted-navigation__list-item input[type="radio"].input--small:checked + span::after, .faceted-navigation__list-item input[type="checkbox"].input--small:checked + span::after { width: 1.2rem; height: 1.2rem; top: .1rem; left: .4rem; font-size: 1.5rem; }
 
 .faceted-navigation .hidden { display: none; }
 
@@ -93,11 +91,7 @@
 
 .faceted-navigation .mobile-header .icon { font-size: 16px; position: relative; top: 4px; }
 
-.faceted-navigation .mobile-done { width: 100%; background-color: #005EB8; position: absolute; bottom: -50px; height: 50px; left: 0; padding-top: 15px; }
-
-.faceted-navigation .mobile-done a { color: #FFF; text-align: center; display: block; width: 100%; font-weight: bold; }
-
-.faceted-navigation__facet-group { border-bottom: 1px solid #e6e6e6; }
+.faceted-navigation__facet-group { border-bottom: 1px solid #EEF0F2; margin-bottom: 1rem; }
 
 .faceted-navigation__header.button--reset, .faceted-navigation__view-more-groups { cursor: pointer; margin: 1.5rem 0; text-align: left; width: 100%; }
 
@@ -109,14 +103,23 @@
 
 .faceted-navigation__view-more-values { font-size: 1.4rem; font-weight: normal; color: #005EB8; padding: 0; }
 
-.faceted-navigation h4 { font-size: 26px; font-weight: bold; margin-bottom: 12px; }
+.faceted-navigation .b-button-facets-apply { width: 100%; }
 
-@media screen and (max-width: 991px) { .faceted-navigation { padding: 60px 30px; }
+@media screen and (max-width: 991px) { .faceted-navigation { display: none; padding: 6rem 3rem; }
+  .facets-open .faceted-navigation { position: fixed; top: 0; display: block; width: 100%; left: 0; padding-top: 5.2rem; bottom: 0px; padding-bottom: 7.3rem; z-index: 10; overflow-y: auto; background-color: #FFF; }
+  .facets-open .faceted-navigation .mobile-header { display: block; }
+  .faceted-navigation .mobile-header { display: none; }
   .faceted-navigation__view-more-values { padding-top: 8px; }
-  .faceted-navigation__header { margin: 9px 0; }
-  .faceted-navigation__mobile-container { margin: 30px 0 30px; }
+  .faceted-navigation__header { margin: .9rem 0; }
   .faceted-navigation__apply { position: fixed; bottom: 0; left: 0; width: 100%; } }
 
-@media screen and (max-width: 991px) { body.facets-open { position: fixed; width: 100%; overflow: hidden; } }
+.faceted-navigation .faceted-navigation-filters { padding: 2rem 0; border-bottom: 1px solid #EEF0F2; }
 
-@media screen and (max-width: 991px) { .faceted-navigation__mobile-container .faceted-navigation { margin-bottom: 30px; } }
+.faceted-navigation .faceted-navigation-filters .faceted-navigation-header__active-filters { width: 72%; display: inline-block; }
+
+.faceted-navigation .faceted-navigation-filters .faceted-navigation-header__filters-actions { float: right; display: inline-block; margin-top: .1rem; text-align: right; }
+
+@media screen and (min-width: 992px) { .faceted-navigation .faceted-navigation-filters { display: none; } }
+
+@media screen and (max-width: 991px) { body.facets-open { position: fixed; width: 100%; overflow: hidden; }
+  body.facets-open header { display: none; } }
