--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -6,172 +6,81 @@
   font-size: 14px;
   margin-bottom: 28px;
 
-  a.open-facets-mobile {
-    width: 100%;
-    text-align: center;
-  }
-
-
-  // SortBy - Custom Dropdown
-  //--------------
-  .styled-dropdown {
-    position: relative;
-    z-index: 1;
-
-    dd,
-    dt,
-    ul {
-      margin: 0px;
-      padding: 0px;
-    }
-
-    .icon {
-      font-size: 12px;
-      color: $color__primary-gray1;
-      font-weight: normal;
-      float: right;
-      margin: 5px 0 0 0;
-      width: 12px;
-
-      &::before {
-        padding-right: 48px;
-        color: $color__primary-blue;
-      }
-    }
-
-    dd {
-      position: relative;
-    }
-
-    dd a,
-    dd a:visited {
-      color: $color__primary-blue;
-      outline: none;
-      margin-left: 12px;
-      font-size: 18px;
-    }
-
-    > dt > a {
-      color: $color__primary-gray1;
-
-      &:hover {
-        color: $color__primary-gray1;
-        text-decoration: none;
-      }
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    dt a:hover {
-      color: $color__primary-gray1;
-      border: 1px solid $color__secondary-gray4;
-    }
-
-    dt a {
-      background: $color__white;
-      display: block;
-      border: 1px solid $color__secondary-gray4;
-      width: 165px;
-      padding: 11px 20px 15px 15px;
-      height: 45px;
-      font-size: 18px;
-      font-weight: normal;
-      opacity: .7;
-      max-width: 165px;
-    }
-
-    dt a span {
-      color: $color__primary-blue;
-      cursor: pointer;
-      display: block;
-    }
-
-    dd ul {
-      background: $color__white none repeat scroll 0 0;
-      border: 1px solid $color__secondary-gray4;
-      border-top: 1px solid $color__white;
-      color: $color__primary-blue;
-      display: none;
-      left: 0px;
-      padding: 5px 0px;
-      position: absolute;
-      top: -1px;
-      // width: auto;
-      width: 165px;
-      max-width: 165px;
-      list-style: none;
-    }
-
-    span.value {
-      display: none;
-    }
-
-    dd ul li a {
-      padding: 5px;
-      display: block;
-    }
-
-    dd ul li a:hover {
-      background-color: $color__white;
-      font-weight: normal;
-    }
-
-    img.flag {
-      border: 0;
-      vertical-align: middle;
-      margin-left: 10px;
-    }
-
-  }
-
-
-  &__sort-options {
-    // margin-top: -1rem;
-    // z-index: 2;
-    // top: .5rem;
-    // position: relative;
-
-    .desc {
-      color: #6b6b6b;
-
-      a { color: #0092dd; }
-    }
-
-    select { display: none; }
-
-    .flagvisibility {
-      display: none;
-    }
-  }
-
-  &__header-top {
-    display: flex;
-  }
-
   &__active-filters {
     width: 100%;
   }
 
-  &__sort-options,
   &__filters-actions {
     margin-left: auto;
     min-width: 85px;
     font-size: 14px;
-    // z-index: 5;
     height: 3.5rem;
-    margin-top: -5px;
   }
 
-  .faceted-navigation-filters {
-    margin-top: 30px;
-    display: flex;
+  &__sort-options {
+    float: right;
+    width: 160px;
+    margin-right: -50px;
+    margin-top: -15px;
+
+    .dropdown {
+      font-family: $font-family__secondary;
+      font-size: 1.8rem;
+      width: 100%;
+      position: relative;
+
+      [data-toggle="dropdown"] {
+        background: $color__white;
+        color: $color__primary-gray2;
+        width: 100%;
+        text-align: left;
+        padding-left: 2rem;
+        padding-top: 2rem;
+        border: 1px solid $color__white;
+
+        &[aria-expanded="true"] {
+          border-color: $color__secondary-gray5;
+          border-bottom-color: $color__white;
+        }
+      }
+
+      .icon {
+        display: inline-block;
+        font-size: 14px;
+        padding-left: 10px;
+        vertical-align: middle;
+        color: $color__primary-blue;
+      }
+
+      .dropdown-menu {
+        box-shadow: none;
+        margin-top: 0;
+        border-top: 0;
+        border-radius: 0;
+        border-color: $color__secondary-gray5;
+      }
+
+      li {
+        padding: 5px 20px;
+        font-size: 18px;
+
+        a {
+          color: $color__primary-blue;
+          display: inline-block;
+          width: 100%;
+          text-align: left;
+          margin: 0;
+          padding: 0;
+        }
+      }
+    }
   }
+
 
   // Results: Header Title
   //--------------
   &__header-top {
+    // display: flex;
     border-bottom: .2rem solid $color__secondary-gray6;
     padding-bottom: 3rem;
     padding-top: 5.5rem;
@@ -180,12 +89,12 @@
   &__title {
     font-size: 2.4rem;
     font-weight: bold;
+    display: inline-block;
   }
 
 
   // Results: Header Filters
   //--------------
-
   &__filter-link {
     display: inline-block;
     font-size: 14px;
@@ -196,9 +105,17 @@
       margin-right: 2px;
       margin-top: 5px;
     }
-
   }
 
+  a.open-facets-mobile {
+    width: 100%;
+    text-align: center;
+  }
+
+  .faceted-navigation-filters {
+    margin-top: 30px;
+    display: flex;
+  }
 
   //-----------------------------------
   // MediaQuery: 0-991px
