--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -99,7 +99,9 @@
       <button
           data-toggle-modal-facet
           class="b-button-facets-apply b-button b-button__tertiary b-button__tertiary--light"
-          data-facets-apply>Done</button>
+          data-facets-apply>
+          ${ 'Done' @ i18n }
+        </button>
     </div>
 
   </div>
