--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -1,64 +1,36 @@
 .faceted-navigation-header { font-size: 14px; margin-bottom: 28px; }
 
-.faceted-navigation-header a.open-facets-mobile { width: 100%; text-align: center; }
-
-.faceted-navigation-header .styled-dropdown { position: relative; z-index: 1; }
-
-.faceted-navigation-header .styled-dropdown dd, .faceted-navigation-header .styled-dropdown dt, .faceted-navigation-header .styled-dropdown ul { margin: 0px; padding: 0px; }
-
-.faceted-navigation-header .styled-dropdown .icon { font-size: 12px; color: #333F48; font-weight: normal; float: right; margin: 5px 0 0 0; width: 12px; }
-
-.faceted-navigation-header .styled-dropdown .icon::before { padding-right: 48px; color: #005EB8; }
-
-.faceted-navigation-header .styled-dropdown dd { position: relative; }
-
-.faceted-navigation-header .styled-dropdown dd a, .faceted-navigation-header .styled-dropdown dd a:visited { color: #005EB8; outline: none; margin-left: 12px; font-size: 18px; }
-
-.faceted-navigation-header .styled-dropdown > dt > a { color: #333F48; }
-
-.faceted-navigation-header .styled-dropdown > dt > a:hover { color: #333F48; text-decoration: none; }
-
-.faceted-navigation-header .styled-dropdown a:hover { text-decoration: underline; }
-
-.faceted-navigation-header .styled-dropdown dt a:hover { color: #333F48; border: 1px solid #CCD2D7; }
-
-.faceted-navigation-header .styled-dropdown dt a { background: #FFF; display: block; border: 1px solid #CCD2D7; width: 165px; padding: 11px 20px 15px 15px; height: 45px; font-size: 18px; font-weight: normal; opacity: .7; max-width: 165px; }
-
-.faceted-navigation-header .styled-dropdown dt a span { color: #005EB8; cursor: pointer; display: block; }
-
-.faceted-navigation-header .styled-dropdown dd ul { background: #FFF none repeat scroll 0 0; border: 1px solid #CCD2D7; border-top: 1px solid #FFF; color: #005EB8; display: none; left: 0px; padding: 5px 0px; position: absolute; top: -1px; width: 165px; max-width: 165px; list-style: none; }
-
-.faceted-navigation-header .styled-dropdown span.value { display: none; }
-
-.faceted-navigation-header .styled-dropdown dd ul li a { padding: 5px; display: block; }
-
-.faceted-navigation-header .styled-dropdown dd ul li a:hover { background-color: #FFF; font-weight: normal; }
-
-.faceted-navigation-header .styled-dropdown img.flag { border: 0; vertical-align: middle; margin-left: 10px; }
-
-.faceted-navigation-header__sort-options .desc { color: #6b6b6b; }
-
-.faceted-navigation-header__sort-options .desc a { color: #0092dd; }
-
-.faceted-navigation-header__sort-options select { display: none; }
-
-.faceted-navigation-header__sort-options .flagvisibility { display: none; }
-
-.faceted-navigation-header__header-top { display: -webkit-box; display: -ms-flexbox; display: flex; }
-
 .faceted-navigation-header__active-filters { width: 100%; }
 
-.faceted-navigation-header__sort-options, .faceted-navigation-header__filters-actions { margin-left: auto; min-width: 85px; font-size: 14px; height: 3.5rem; margin-top: -5px; }
+.faceted-navigation-header__filters-actions { margin-left: auto; min-width: 85px; font-size: 14px; height: 3.5rem; }
 
-.faceted-navigation-header .faceted-navigation-filters { margin-top: 30px; display: -webkit-box; display: -ms-flexbox; display: flex; }
+.faceted-navigation-header__sort-options { float: right; width: 160px; margin-right: -50px; margin-top: -15px; }
+
+.faceted-navigation-header__sort-options .dropdown { font-family: Arial, "Arial", sans-serif; font-size: 1.8rem; width: 100%; position: relative; }
+
+.faceted-navigation-header__sort-options .dropdown [data-toggle="dropdown"] { background: #FFF; color: #5B6770; width: 100%; text-align: left; padding-left: 2rem; padding-top: 2rem; border: 1px solid #FFF; }
+
+.faceted-navigation-header__sort-options .dropdown [data-toggle="dropdown"][aria-expanded="true"] { border-color: #EEF0F2; border-bottom-color: #FFF; }
+
+.faceted-navigation-header__sort-options .dropdown .icon { display: inline-block; font-size: 14px; padding-left: 10px; vertical-align: middle; color: #005EB8; }
+
+.faceted-navigation-header__sort-options .dropdown .dropdown-menu { -webkit-box-shadow: none; box-shadow: none; margin-top: 0; border-top: 0; border-radius: 0; border-color: #EEF0F2; }
+
+.faceted-navigation-header__sort-options .dropdown li { padding: 5px 20px; font-size: 18px; }
+
+.faceted-navigation-header__sort-options .dropdown li a { color: #005EB8; display: inline-block; width: 100%; text-align: left; margin: 0; padding: 0; }
 
 .faceted-navigation-header__header-top { border-bottom: 0.2rem solid #F8F8F8; padding-bottom: 3rem; padding-top: 5.5rem; }
 
-.faceted-navigation-header__title { font-size: 2.4rem; font-weight: bold; }
+.faceted-navigation-header__title { font-size: 2.4rem; font-weight: bold; display: inline-block; }
 
 .faceted-navigation-header__filter-link { display: inline-block; font-size: 14px; margin-right: 12px; }
 
 .faceted-navigation-header__filter-link .icon { font-size: 10px; margin-right: 2px; margin-top: 5px; }
+
+.faceted-navigation-header a.open-facets-mobile { width: 100%; text-align: center; }
+
+.faceted-navigation-header .faceted-navigation-filters { margin-top: 30px; display: -webkit-box; display: -ms-flexbox; display: flex; }
 
 @media screen and (max-width: 991px) { .faceted-navigation-header .faceted-navigation-filters { display: none; }
   .faceted-navigation-header__filter-link { font-size: 12px; } }
@@ -85,7 +57,7 @@
 
 .faceted-navigation .visibile { display: block; }
 
-.faceted-navigation .mobile-header { position: fixed; top: 0; height: 53px; font-size: 18px; left: 0; color: #FFF; background-color: #333F48; width: 100%; padding: 15px 30px 0 30px; z-index: 510; }
+.faceted-navigation .mobile-header { display: none; position: fixed; top: 0; height: 53px; font-size: 18px; left: 0; color: #FFF; background-color: #333F48; width: 100%; padding: 15px 30px 0 30px; z-index: 510; }
 
 .faceted-navigation .mobile-header .close-facets-mobile { position: absolute; display: block; right: 20px; top: 50%; width: 48px; height: 48px; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
 
