[Styleguide] It dinamically creates the list of Glyphicons for the Styleguide page every time the font is compiled / updated

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-glyphicon-font.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-glyphicon-font.html
@@ -47,7 +47,7 @@
 
     <div class="b-heading-h5">Icon Library:</div>
     <ul class="sg-glyphicons__list">
-      <sly data-sly-list="${ data }">
+      <sly data-sly-list="${ data.icons }">
         <div class="sg-glyphicons__list-item text-center">
           <div class="sg-glyphicons__icon-sample">
             <i class="icon ${ item }" aria-hidden="true"></i>
