--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -40,7 +40,7 @@
       data-toggle-modal-facet
       class="open-facets-mobile b-button b-button__primary b-button__primary--light"
       role="button">
-      ${ '{0} ({1})' @ i18n, format=[ 'Filters', data.resultsCount ] }
+      ${ '{0} ({1})' @ i18n, format=[ 'Filters', data.activeFilters.items.length ] }
     </a>
   </div>
 </template>
