--- a/eaton.frontend/src/components/quote/css/quote.scss
+++ b/eaton.frontend/src/components/quote/css/quote.scss
@@ -33,7 +33,7 @@
   }
 
   &__text {
-    font-size: 34px;
+    font-size: 3.4rem;
     font-style: italic;
     font-family: Arial;
     color: $color__primary-gray3;
@@ -41,7 +41,7 @@
   }
 
   &__author {
-    font-size: 20px;
+    font-size: 2rem;
     font-family: Arial;
     font-style: italic;
     color: $color__primary-gray1;
@@ -70,12 +70,12 @@
     }
 
     &__text {
-      font-size: 23px;
+      font-size: 2.3rem;
       margin-bottom: 20px;
     }
 
     &__author {
-      font-size: 16px;
+      font-size: 1.6rem;
     }
 
     &__name {
