--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
@@ -6,14 +6,14 @@
 
 .eaton-quote__image .icon { font-size: 8rem; }
 
-.eaton-quote__text { font-size: 34px; font-style: italic; font-family: Arial; color: #98A4AE; margin-bottom: 60px; }
+.eaton-quote__text { font-size: 3.4rem; font-style: italic; font-family: Arial; color: #98A4AE; margin-bottom: 60px; }
 
-.eaton-quote__author { font-size: 20px; font-family: Arial; font-style: italic; color: #333F48; }
+.eaton-quote__author { font-size: 2rem; font-family: Arial; font-style: italic; color: #333F48; }
 
 .eaton-quote__name { font-weight: bold; }
 
 @media screen and (max-width: 991px) { .eaton-quote .container { padding: 60px 15px 25px; }
   .eaton-quote__image .icon { font-size: 6rem; line-height: .9; }
-  .eaton-quote__text { font-size: 23px; margin-bottom: 20px; }
-  .eaton-quote__author { font-size: 16px; }
+  .eaton-quote__text { font-size: 2.3rem; margin-bottom: 20px; }
+  .eaton-quote__author { font-size: 1.6rem; }
   .eaton-quote__name { display: block; } }
