--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -187,9 +187,9 @@
 
 .eaton-ttil-quote__text-container { padding: 30px 30px 45px; color: #FFF; }
 
-.eaton-ttil-quote__quote { padding-bottom: 30px; font-size: 23px; line-height: 38px; font-style: italic; }
+.eaton-ttil-quote__quote { padding-bottom: 30px; font-size: 2.3rem; line-height: 38px; font-style: italic; }
 
-.eaton-ttil-quote__author { font-size: 15px; font-style: italic; }
+.eaton-ttil-quote__author { font-size: 1.5rem; font-style: italic; }
 
 .eaton-ttil-quote__author .author { font-weight: bold; }
 
@@ -200,8 +200,8 @@
   .eaton-ttil-quote__image .rendition img { width: 484px; height: 484px; }
   .eaton-ttil-quote__image__icon { margin: 0; position: absolute; left: 100%; top: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); }
   .eaton-ttil-quote__text-container { width: calc(100% - 484px); -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; padding: 0 70px; }
-  .eaton-ttil-quote__quote { font-size: 30px; line-height: 48px; padding-bottom: 60px; }
-  .eaton-ttil-quote__author { font-size: 20px; }
+  .eaton-ttil-quote__quote { font-size: 3.0rem; line-height: 48px; padding-bottom: 60px; }
+  .eaton-ttil-quote__author { font-size: 2.0rem; }
   .eaton-ttil-quote__left { margin-left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; }
   .eaton-ttil-quote__left .eaton-ttil-quote__image { -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; }
   .eaton-ttil-quote__left .eaton-ttil-quote__image__icon { left: 0; -webkit-transform: translateX(-50%); transform: translateX(-50%); }
