--- a/eaton.frontend/src/components/how-to-buy/css/how-to-buy.scss
+++ b/eaton.frontend/src/components/how-to-buy/css/how-to-buy.scss
@@ -61,19 +61,28 @@
         flex-wrap: wrap;
         flex-direction: row;
 
-        .col-md-4 {
-          flex: 0 0 33%;
+        .col-md-3 {
+          flex: 0 0 24%;
           padding: 0;
         }
 
-        .col-md-8 {
-          flex: 0 0 66%;
+        .col-md-9 {
+          flex: 0 0 75%;
           padding: 0;
 
           > .row {
 
             .col-md-6 {
               flex: 0 0 49%;
+
+              &:nth-child(2n) {
+                padding-left: 60px;
+                padding-right: 0;
+              }
+
+              &:nth-child(2n+1) {
+                padding-left: 30px;
+              }
             }
           }
         }
@@ -93,7 +102,7 @@
   .eaton-how-to-buy {
     .container {
       &.row {
-        .col-md-8 {
+        .col-md-9 {
 
           > .row .col-md-6 {
             flex: 0 0 41%;
