--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/how-to-buy/css/how-to-buy.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/how-to-buy/css/how-to-buy.css
@@ -15,9 +15,11 @@
   .eaton-how-to-buy__element { margin-bottom: 90px; }
   .eaton-how-to-buy .container { margin: 0 auto; }
   .eaton-how-to-buy .container.row { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; }
-  .eaton-how-to-buy .container.row .col-md-4 { -webkit-box-flex: 0; -ms-flex: 0 0 33%; flex: 0 0 33%; padding: 0; }
-  .eaton-how-to-buy .container.row .col-md-8 { -webkit-box-flex: 0; -ms-flex: 0 0 66%; flex: 0 0 66%; padding: 0; }
-  .eaton-how-to-buy .container.row .col-md-8 > .row .col-md-6 { -webkit-box-flex: 0; -ms-flex: 0 0 49%; flex: 0 0 49%; }
+  .eaton-how-to-buy .container.row .col-md-3 { -webkit-box-flex: 0; -ms-flex: 0 0 24%; flex: 0 0 24%; padding: 0; }
+  .eaton-how-to-buy .container.row .col-md-9 { -webkit-box-flex: 0; -ms-flex: 0 0 75%; flex: 0 0 75%; padding: 0; }
+  .eaton-how-to-buy .container.row .col-md-9 > .row .col-md-6 { -webkit-box-flex: 0; -ms-flex: 0 0 49%; flex: 0 0 49%; }
+  .eaton-how-to-buy .container.row .col-md-9 > .row .col-md-6:nth-child(2n) { padding-left: 60px; padding-right: 0; }
+  .eaton-how-to-buy .container.row .col-md-9 > .row .col-md-6:nth-child(2n+1) { padding-left: 30px; }
   .eaton-how-to-buy .container.row .row { margin: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; } }
 
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { .eaton-how-to-buy .container.row .col-md-8 > .row .col-md-6 { -webkit-box-flex: 0; -ms-flex: 0 0 41%; flex: 0 0 41%; } }
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { .eaton-how-to-buy .container.row .col-md-9 > .row .col-md-6 { -webkit-box-flex: 0; -ms-flex: 0 0 41%; flex: 0 0 41%; } }
