--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
@@ -2,8 +2,13 @@
     <div class="row">
 
 
+<div class="col-xs-12">
 <h2>${data.title}</h2>
 <p class="text-only-2-column__description">${data.description}</p>
+</div>
+</div>
+    <div class="row">
+
 
         <div class="text-only-2-column__card" data-sly-list.card="${data.cards}">
 <div class="col-xs-12 col-md-6 text-only-2-column__article">
