--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
@@ -8,10 +8,8 @@
 </div>
 </div>
     <div class="row">
-
-
         <div class="text-only-2-column__card" data-sly-list.card="${data.cards}">
-<div class="col-xs-12 col-md-6 text-only-2-column__article">
+            <div class="col-xs-12 col-md-6 text-only-2-column__article">
 
             <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}" class="article-list-single-feature__link">
                 <span class="article-list-single-feature--border"></span>
@@ -21,18 +19,15 @@
                     <p class="category-item-date"><em>${card.date_text}</em></p>
                 </div>
             </a>
-
-
         </div>
-
         </div>
     </div>
 
 
     <!--/* Bottom CTA */-->
     <div class="row">
-        <div class="col-xs-12 text-center featured-category__cta-container">
-            <sly data-sly-resource="${'featured-article-ctabutton' @ resourceType='/apps/eaton/static-components/general/cta'}"></sly>
+        <div class="col-xs-12 text-center text-only-2-column__cta-container">
+            <a href="${data.readmore_cta.url}" target="${data.readmore_cta.target}" class="b-button b-button__primary b-button__primary--light">${data.readmore_cta.title}</a>
         </div>
     </div>
 </div>
