--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
@@ -24,10 +24,14 @@
     </div>
 
 
-    <!--/* Bottom CTA */-->
+   <!--/* Bottom CTA */-->
     <div class="row">
         <div class="col-xs-12 text-center text-only-2-column__cta-container">
-            <a href="${data.readmore_cta.url}" target="${data.readmore_cta.target}" class="b-button b-button__primary b-button__primary--light">${data.readmore_cta.title}</a>
+            <sly data-sly-resource="${'cta' @ resourceType='/apps/eaton/static-components/general/cta'}"></sly>
         </div>
     </div>
-</div>
+
+
+    </div>
+
+
