[Eaton-30] Country Selector Drawer: Initial markup structure - View

--- a/eaton.frontend/src/components/full-page-drawer/css/full-page-drawer.scss
+++ b/eaton.frontend/src/components/full-page-drawer/css/full-page-drawer.scss
@@ -8,7 +8,7 @@
 .full-page-drawer {
   background: $color__primary-gray2;
   color: $color__white;
-  display: none;
+  // display: none;
 
   &__headline {
     background: $color__primary-gray1;
