--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/full-page-drawer/css/full-page-drawer.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/full-page-drawer/css/full-page-drawer.css
@@ -1,4 +1,4 @@
-.full-page-drawer { background: #5B6770; color: #FFF; display: none; }
+.full-page-drawer { background: #5B6770; color: #FFF; }
 
 .full-page-drawer__headline { background: #333F48; padding: 30px 0; }
 
