--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-drawer.html
@@ -1,10 +1,51 @@
 <!--/* Country Selector: Drawer */-->
-<div class="country-selector--drawer">
+<sly data-sly-use.data="${'../data/view-data.js' @testdata=properties.testdata}">
+  <div class="country-selector--drawer">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
-                Country Selector -- View Drawer
+            <h2 class="col-sm-12 country-selector__header">${data.header}</h2>
+
+            <div class="u-visible-desktop col-md-3 country-selector__regions">
+              List of regions goes here
+            </div>
+            <div data-sly-list="${data.regionList}" class="col-sm-12 col-md-9 panel-group country-selector__list" role="tablist" aria-multiselectable="true">
+                <div class="panel country-selector__item">
+                    <div class="panel-heading country-selector__item-header" role="tab" id="${item.regionId}">
+                        <a href="#collapse-${itemList.index}"
+                        class="country-selector__item-link u-absolute-fill"
+                        role="button"
+                        aria-expanded="false"
+                        aria-controls="collapse-${itemList.index}"
+                        data-toggle="collapse"
+                        data-parent="country-selector__item">
+                            <span class="sr-only">Select your location</span>
+                        </a>
+                        <h3 class="country-selector__item-title b-heading-h3">${item.regionName}</h3>
+                        <i class="country-selector__item-icon icon" aria-hidden="true">
+                          <span class="sr-only"></span>
+                        </i>
+                    </div>
+
+                    <div id="collapse-${itemList.index}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="${item.regionId}">
+                        <div class="country-selector__item-body">
+                            <ul data-sly-list.country="${item.countryList}" class="country-selector__item-list">
+                                <li class="col-xs-12 col-md-3 country-selector__item-country">
+                                    <div class="country-selector__item-country-name">
+                                      <i class="country-selector__item-country-flag flag-${country.countryId}" aria-hidden="true"></i>
+                                      <span class="country-selector__item-country-label b-eyebrow-small">${country.countryName}</span>
+                                    </div>
+                                    <ul data-sly-list.language="${country.languageList}" class="country-selector__item-language-list b-body-copy-small">
+                                        <li class="country-selector__item-language">
+                                          <a href="${language.languagePath}" target="{language.target}">${language.languageName}</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
+ </div>
+</sly>
