[M-32] text only 3 column view creation

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
@@ -3,7 +3,7 @@
 
 
 <div class="col-xs-12">
-<h2>${data.title}</h2>
+<h2 class="b-heading-h2">${data.title}</h2>
 <p class="text-only-2-column__description">${data.description}</p>
 </div>
 </div>
