--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -22,7 +22,7 @@
   //-----------------------------------
   @include media-mobile-and-tablet {
     .eaton-logo {
-      padding: 10px 15px; // 4px for bottom shadow - height
+      padding: 10px 15px;
 
       &__link {
         width: 100px;
@@ -36,7 +36,7 @@
   //-----------------------------------
   @include media-desktop-and-up {
     .eaton-logo {
-      padding: 20px 15px 16px; // 4px for bottom shadow - height
+      padding: 20px 15px 16px;
     }
 
     &--fixed {
@@ -45,7 +45,6 @@
       z-index: 250;
       top: 0;
 
-      .full-page-drawer,
       .header-utility-nav {
         display: none;
       }
@@ -53,7 +52,6 @@
       .eaton-logo__link {
         width: 126px;
         height: 40px;
-        // transition: height 0.3s ease-in-out, width 0.3s ease-in-out; // Add transition only when fixed
       }
     }
   }
