--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -60,6 +60,28 @@
 
 @media screen and (min-width: 992px) { .header-search { position: absolute; -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.45); box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.45); } }
 
+@media screen and (max-width: 991px) { .nav-open { position: fixed; width: 100%; overflow: hidden; }
+  .nav-open .eaton-link-list-primary-nav { overflow: auto; visibility: visible; opacity: 1; }
+  .nav-open .header-primary-nav__toggle-mobile-menu { -webkit-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; background: #333F48; }
+  .nav-open .header-primary-nav__toggle-mobile-menu .icon-hamburger { display: none; }
+  .nav-open .header-primary-nav__toggle-mobile-menu .icon-close { display: block; top: -3px; font-size: 18px; }
+  .level-2-open { overflow: hidden; position: fixed; width: 100%; }
+  .level-2-open .eaton-link-list-primary-nav { -webkit-transform: translate(-100%, 0); transform: translate(-100%, 0); }
+  .level-2-open .mega-menu { -webkit-transform: translate(0, 0); transform: translate(0, 0); }
+  .nav-is-animating .mega-menu { -webkit-transition: -webkit-transform 0.5s ease-in-out; transition: -webkit-transform 0.5s ease-in-out; transition: transform 0.5s ease-in-out; transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out; }
+  .search-open { overflow: hidden; position: fixed; width: 100%; }
+  .search-open .header-primary-nav__open-search { -webkit-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; background: #333F48; }
+  .search-open .header-primary-nav__open-search .icon-search { display: none; }
+  .search-open .header-primary-nav__open-search .icon-close { display: block; top: -3px; font-size: 18px; } }
+
+@media screen and (min-width: 992px) { .level-2-open .mega-menu { visibility: visible; opacity: 1; } }
+
+.aem-AuthorLayer-Edit .mega-menu, .aem-AuthorLayer-Edit .header-search, .cq-wcm-edit .mega-menu, .cq-wcm-edit .header-search { position: relative !important; visibility: visible !important; opacity: 1 !important; z-index: 99999 !important; }
+
+.aem-AuthorLayer-Edit .mega-menu__content, .aem-AuthorLayer-Edit .header-search__content, .cq-wcm-edit .mega-menu__content, .cq-wcm-edit .header-search__content { display: block !important; }
+
+.aem-AuthorLayer-Edit .header-search, .cq-wcm-edit .header-search { -webkit-transform: translateY(0) !important; transform: translateY(0) !important; -webkit-transition: none !important; transition: none !important; }
+
 .eaton-header { position: relative; z-index: 200; }
 
 @media screen and (max-width: 991px) { .eaton-header .eaton-logo { padding: 10px 15px; }
@@ -67,5 +89,5 @@
 
 @media screen and (min-width: 992px) { .eaton-header .eaton-logo { padding: 20px 15px 16px; }
   .eaton-header--fixed { position: fixed; width: 100%; z-index: 250; top: 0; }
-  .eaton-header--fixed .full-page-drawer, .eaton-header--fixed .header-utility-nav { display: none; }
+  .eaton-header--fixed .header-utility-nav { display: none; }
   .eaton-header--fixed .eaton-logo__link { width: 126px; height: 40px; } }
