small style details

--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -111,7 +111,7 @@
 
     .icon::before {
       position: absolute;
-      right: 33px;
+      right: 0;
       color: $color__primary-blue;
       font-size: 12px;
       margin-top: 6px;
