--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -71,6 +71,11 @@
           text-align: left;
           margin: 0;
           padding: 0;
+
+          &:hover {
+            background-color: $color__white;
+            text-decoration: underline;
+          }
         }
       }
     }
@@ -83,7 +88,7 @@
     // display: flex;
     border-bottom: .2rem solid $color__secondary-gray6;
     padding-bottom: 3rem;
-    padding-top: 5.5rem;
+    padding-top: 6rem;
   }
 
   &__title {
@@ -127,7 +132,8 @@
       display: none;
     }
 
-    &__filter-link {
+    &__filter-link,
+    &__filters-actions {
       font-size: 12px;
     }
   }
