fix font weight for form label

--- a/eaton.frontend/src/global/css/base/elements/forms/_form.scss
+++ b/eaton.frontend/src/global/css/base/elements/forms/_form.scss
@@ -80,6 +80,10 @@
     width: 100%;
   }
 
+  .field-p .label .inner {
+    font-weight: 100;
+  }
+
   // TWO COLUMN
 
   // stylelint-disable-next-line selector-class-pattern
