[Eaton-30] Country Selector Drawer: Close the drawer when the nav is in sticky-mode post scroll (docked to top of page)

--- a/eaton.frontend/src/components/header/css/_header-interactions.scss
+++ b/eaton.frontend/src/components/header/css/_header-interactions.scss
@@ -95,6 +95,11 @@
       opacity: 1;
     }
   }
+
+  .drawer-open {
+    max-height: 2000;
+    visibility: visible;
+  }
 }
 
 //-----------------------------------
