--- a/eaton.frontend/src/components/full-page-drawer/css/full-page-drawer.scss
+++ b/eaton.frontend/src/components/full-page-drawer/css/full-page-drawer.scss
@@ -31,9 +31,9 @@
   // Desktop Breakpoint
   //-----------------------------------
   @include media-desktop-and-up {
-    // max-height: 0;
+    max-height: 0;
     overflow: hidden;
-    // visibility: hidden;
+    visibility: hidden;
     transition: max-height 0.3s ease-in-out, visibility 0.3s ease-in-out;
   }
 }
